# protobufs-poc

./: .gitignore  Makefile  README.md  buf.gen.yaml  buf.yaml  pyproject.toml
proto/data_bridge/hello_world/v1/: hello_world.proto
proto/data_bridge/v1/: data_bridge.proto
proto/data_bridge/word_parser/v1/: word_parser.proto
proto/flow_of_work/messages/v1/: messages.proto
