[tool.poetry]
name = "ff_protobuffs"
version = "0.1.0"
description = "Centralized repo for managing protobufs"
authors = [
    "Mike O'Donnell <mike.odonnell@15five.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"  # Explicitly specify the Python version range

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.0"
build = "^1.2.2.post1"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ff_protobuffs"
version = "0.1.0"
description = "Centralized repo for managing protobufs"
dependencies = [
    "grpcio==1.68.0",
]

[tool.setuptools.packages.find]
where = ["pysrc"]
namespaces = false